--- a/conky/conky_bl.conf
+++ b/conky/conky_bl.conf
@@ -49,6 +49,6 @@ ${color2}├─╶${color0} Calendar
 ${color2}│   └─╶${color orange}${execi 10 date | cut -d ' ' -f 1} ${color0}${execi 10 date | cut -d ' ' -f 3} │ ${execi 10 date | cut -d ' ' -f 2} │ ${execi 10 date | cut -d ' ' -f 6}
 ${color2}│
 ${color2}├─╶${color0} Weather
-${color2}│   └─╶${color0}${execi 300 ~/.config/conky/scripts/weather.sh "EUR|IE|EI006|DUBLIN"}
+${color2}│   └─╶${color0}${execi 300 ~/.weather.sh "EUR|IE|EI006|DUBLIN"}
 ${color2}│
 ${color2}│
